<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tourngen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="sync">Synchronize</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="new_tournament">New Tournament</string>
    <string name="register">Register</string>
    <string-array name="Tournaments">
        <item >Copa Libertadores 14/15</item>
        <item >Liga USFQ VI</item>
        <item >Copa KFC</item>
        <item >VG Night 2015</item>
        <item >Torneo Extra</item>
  
    </string-array>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="fixtures">Fixtures</string>
    <string name="matches">Matches</string>
    <string name="pos">Pos</string>
    <string name="pts">Pts</string>
    <string name="gp">GP</string>
    <string name="gw">GW</string>
    <string name="gt">GT</string>
    <string name="gl">GL</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string-array name="Teams">
        <item >Team A</item>
        <item >Team B</item>
        <item >Team C</item>
        <item >Team D</item>
        <item >Team E</item>
        <item >Team F</item>
        <item >Team G</item>
    </string-array>
    <string name="num">#</string>
    <string name="home_team">Home Team</string>
    <string name="score">Score</string>
    <string name="away_team">Away Team</string>
    <string name="date">Date</string>
    <string name="info">Info</string>
    <string name="decrease_goals">Decrease Goals</string>
    <string name="increase_goals">Increase Goals</string>
    <string name="played">Played</string>
    <string name="not_played">Not Played</string>
    <string name="fixture">Fixture</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="home_and_away">Home &amp; Away</string>
    <string name="test_date">Test Date</string>
    <string name="private_">Private</string>
    <string name="add_team">Add Team</string>
    <string name="new_team">New Team</string>
    <string name="delete_team">Delete Team</string>
	<string name="shuffle">Shuffle</string>
	<string name="dash">-</string>
	<string name="tournament">Tournament</string>
	<string name="edit_scores">Can Edit Scores</string>
	<string name="send">Send</string>
	<string name="delete_tournament">Delete Tournament</string>
</resources>
