<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tournament_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tournament Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tournament_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start: 14-03-2014"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tournament_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End: 15-03-2014"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/tournament_homeaway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home and Away" />

    <CheckBox
        android:id="@+id/tournament_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Public" />

    <ScrollView
        android:id="@+id/tournament_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.9" >

        <TableLayout
            android:id="@+id/tournament_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/position_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pos"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="@string/team"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_pts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pts"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gw"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gt"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gl"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gf"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_ga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ga"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/position_gd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gd"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

        </TableLayout>

    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/tournament_teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teams" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/tournament_fixtures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixtures" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/tournament_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matches" />
    </LinearLayout>

</LinearLayout>