<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:onClick="changePlayed"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fixture"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/match_fixture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/match_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ToggleButton
        android:id="@+id/match_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changePlayed"
        android:text="@string/played"
        android:textOff="@string/not_played"
        android:textOn="@string/played" />

    <TextView
        android:id="@+id/match_hTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_team"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/decrease_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/decrease_goals"
            android:src="@android:drawable/arrow_down_float" 
            android:onClick="onClick"/>

        <EditText
            android:id="@+id/home_score"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/increase_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/increase_goals"
            android:src="@android:drawable/arrow_up_float"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/decrease_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/decrease_goals"
            android:src="@android:drawable/arrow_down_float"
            android:onClick="onClick"/>

        <EditText
            android:id="@+id/away_score"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" >

        </EditText>

        <ImageButton
            android:id="@+id/increase_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/increase_goals"
            android:src="@android:drawable/arrow_up_float"
            android:onClick="onClick"/>

    </LinearLayout>

    <TextView
        android:id="@+id/match_aTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/away_team"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/match_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
