<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/fixture_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Teams" 
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/match_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/num" />

        <TextView
            android:id="@+id/match_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/home_team" />

        <TextView
            android:id="@+id/match_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/score" />

        <TextView
            android:id="@+id/match_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/away_team" />

        <TextView
            android:id="@+id/match_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/date" />

    </LinearLayout>

<ScrollView
        android:id="@+id/fixture_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.9" >

       <TableLayout
            android:id="@+id/fixture_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </TableLayout>

    </ScrollView>
  

</LinearLayout>
