<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/new_tournament_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/new_tournament_sDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right" 
            android:text="@string/start_date"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:clickable="true"
            android:onClick="showDatePicker"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:clickable="true"
            android:onClick="showDatePicker"/>

        <TextView
            android:id="@+id/new_tournament_eDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:gravity="center_vertical|right"
			android:clickable="true"
            android:onClick="showDatePicker"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal" >

        <CheckBox
            android:id="@+id/new_private_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_" />

        <CheckBox
            android:id="@+id/new_haw_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_and_away" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_tournament_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

</LinearLayout>
